[package]
name = "rust_code"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess-engine = { git = "https://github.com/craigfay/chess-engine" }

[lib]
name = "ml_chess"
crate-type = ["cdylib"]

