[package]
name = "reinforcement_learning_chess"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess-engine = { git = "https://github.com/craigfay/chess-engine" }
rand = "0.7"

[[bin]]
name = "training"
path = "src/bin/training.rs"

[[bin]]
name = "play_vs_human"
path = "src/bin/play_vs_human.rs"

[lib]
path = "src/lib.rs"

